-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 260900) **
-----------------------------------------------------------------------

About the version numbers... "vx.y.zRt" :

  x = major version  - the overall development status
  y = devel-series   - represents a set of planned features
  z = minor version  - version number of the current development series
  Rt = 'rx'          - stable release number x
  Rt = 'dx'  	     - development version

-----------------------------------------------------------------------

Last officially released version is -*> v1.8.2r14 <*-

26092000 (v1.8.3d15)
	- changed: code for parsing command-line arguments rewritten; 
		   now reports about invalid arguments
	- changed: default precision when printing time in seconds 
		   changed to 3 (msec precision)
	- fixed: ALSA 0.6.x updates
	- fixed: few bugs in aRts plugin
16092000 (v1.8.2r14)  -** public release **-
	- added: --enable-alsa-rawmidi configure option - this is a 
		 temporary solution for supporting ALSA rawmidi until
		 we have a proper plugin-based MIDI-subsystem
	- fixed: some broken mp3 headers caused ecasound to misinterpret
		 mp3 sampling rate
	- fixed: problems when handling mp3 files with white-space in 
		 the filename (R.Sassmannshausen)
	- fixed: incorrect riff-wave header bug fixed (A.Hamara)
	- fixed: in some cases, controllers weren't parsed correctly
	- fixed: annoying clicks with phaser, flanger and chorus
01092000 (v1.8.1d14)
	- notice: all qt-related stuff put to separate packages
	- added: support for internal plugins; modules using external 
		 libraries (ALSA, aRts, libaudiofile, etc) are now 
  	         dynamically loaded on runtime (no unnecessary 
                 dependencies); installed by default to 
  		 (prefixdir)/lib/ecasound-plugins; see also
	         ecasoundrc(5) man page for related entries
	- added: new ecasound-plugins rpm package